objects/Aug_Demo__c.object
<CustomObject>
    <fields>
        <fullName>Aug_text__c</fullName>
        <label>Aug text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <label>Type1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Aug Demo</label>
    <nameField>
        <label>Aug Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aug Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>